--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,15 @@ nav .logo-studio {
   flex-direction: column;
   align-items: center;
   margin: 0;
+  max-width: 1440px;
+  background-image: radial-gradient(
+     at center, 
+  var(--hero-background), 
+  var(--hero-background)), 
+  url('./images/people-office1.jpg'
+);
+background-position: center; 
+background-size: cover;
 }
 
 .heading-one {
@@ -371,6 +380,15 @@ nav .logo-studio {
   border-radius: 0 0 4px 4px;
   flex-basis: calc((100% -72px) / 4);
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+/* ____________________________________________________ CUSTOMERS */
+
+.customers {
+  display: inline-flex;
+  align-items: flex-start;
+  justify-items: space-between;
+  gap: var(--gap-content);
 }
 
 /* __________________________________PORTFOLIO PAGE */
