--- a/css/styles.css
+++ b/css/styles.css
@@ -199,20 +199,17 @@ nav .logo-studio {
 }
 
 .background {
-  background-image: radial-gradient(
-     to right, 
-  var(--hero-background), 
-  var(--hero-background)), 
-  url('https://github.com/KamaWalk/goit-homework-04/blob/main/images/people-office1.jpg'
-); 
+  background-image: linear-gradient(
+     to right, var(--hero-background), 
+  var(--hero-background)), url("https://raw.githubusercontent.com/KamaWalk/goit-homework-04/main/images/people-office1.jpg"); 
+  max-width: 1440px;
 }
 
 .container-one {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  margin: 0;
-  max-width: 1440px;
+  margin: 0 auto;
   color: var(--white-background);
 }
 
@@ -291,6 +288,23 @@ nav .logo-studio {
 
 .i-list-item:last-child {
   padding-right: 0;
+}
+
+.goal-icon-box {
+width: 264px;
+height: 112px;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-bottom: 8px;
+background: var(--light);
+border-radius: 4px;
+
+}
+
+.goal-icon-box > svg {
+width: 64px;
+height: 64px;
 }
 
 .index-h-three {
