--- a/css/styles.css
+++ b/css/styles.css
@@ -242,12 +242,7 @@ nav .logo-studio {
   min-width: 169px;
 }
 
-.index-s-one-button:hover {
-  background-color: var(--pressed-state);
-  border: none;
-}
-
-.index-s-one-button:focus {
+.index-s-one-button:hover, .index-s-one-button:focus {
   background-color: var(--pressed-state);
   border: none;
 }
@@ -398,6 +393,32 @@ height: 64px;
   border-radius: 0 0 4px 4px;
   flex-basis: calc((100% -72px) / 4);
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.social-media-list {
+  width: 40px;
+  height: 40px;
+}
+
+.social-media-icons {
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 24px;
+}
+
+.sm-icon {
+background-color: var(--primary-brand);
+border-radius: 50%;
+width: 100%;
+height: 100%;
+display:flex;
+justify-content: center;
+align-items: center;
+}
+
+.sm-icon:hover, .sm-icon:focus {
+  background-color: var(--pressed-state);
 }
 
 /* ____________________________________________________ CUSTOMERS */
