--- a/css/styles.css
+++ b/css/styles.css
@@ -173,8 +173,12 @@ nav .logo-studio {
 .footer {
   background-color: var(--dark);
   padding: 100px 0;
-}
+  }
 
+.footer-container {
+  display: flex;
+}
+  
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -184,6 +188,36 @@ nav .logo-studio {
   color: var(--light);
   max-width: 264px;
   text-align: left;
+}
+
+.sm-footer-div {
+  margin-left: 120px;
+}
+
+.social-media-text {
+  color: var(--white-background);
+}
+
+.sm-icons-footer {
+  display: flex;
+justify-content: center;
+align-items: center;
+gap: 16px;
+margin-top: 16px;
+}
+
+.sm-icon-f {
+background-color: var(--primary-brand);
+border-radius: 50%;
+width: 100%;
+height: 100%;
+display:flex;
+justify-content: center;
+align-items: center;
+}
+
+.sm-icon-f:hover, .sm-icon-f:focus {
+  background-color: var(--success);
 }
 
 /* INDEX PAGE */
@@ -425,10 +459,28 @@ align-items: center;
 
 .customers {
   display: inline-flex;
-  align-items: flex-start;
-  justify-items: space-between;
+  align-items: center;
+  justify-items: center;
   gap: var(--gap-content);
 }
+
+.icon-list {
+  width: 168px;
+  height: 88px;
+  padding: 16px 32px;
+}
+
+.icon {
+background-color: var(--white-background);
+border-radius: 4px;
+border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+width: 100%;
+height: 100%;
+display:flex;
+justify-content: center;
+align-items: center;
+}
+
 
 /* __________________________________PORTFOLIO PAGE */
 .section-portfolio {
