--- a/css/styles.css
+++ b/css/styles.css
@@ -467,7 +467,7 @@ align-items: center;
 /* ____________________________________________________ CUSTOMERS */
 
 .customers {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-items: center;
   gap: var(--gap-content);
@@ -476,20 +476,39 @@ align-items: center;
 .icon-list {
   width: 168px;
   height: 88px;
-  padding: 16px 32px;
+  }
+
+.customers-icon {
+  width: 100%;
+  height: 100%;
+  
 }
+
+
 
 .icon {
 background-color: var(--white-background);
 border-radius: 4px;
-border: 1px solid var(--LIGHT-SLATE, #8E8F99);
-width: 100%;
-height: 100%;
+border: 1px solid var(--subtle-text);
+width: calc((100% - 120px) / 6);
 display:flex;
 justify-content: center;
 align-items: center;
+width: 100%;
+height: 100%;
+padding: 16px 32px;
+color: var(--subtle-text);
 }
 
+.icon:hover, .icon:focus {
+  background-color: var(--white-background);
+  color: var(--pressed-state);
+  border-color: var(--pressed-state);
+}
+
+.svg-customer {
+  fill: currentColor;
+}
 
 /* __________________________________PORTFOLIO PAGE */
 .section-portfolio {
