--- a/css/styles.css
+++ b/css/styles.css
@@ -575,7 +575,11 @@ color: var(--subtle-text);
   width: calc{(100%-48px)/3};
 }
 
-.image-link:hover, .image-link:focus {
+.aplication-link {
+  display: block;
+}
+
+.aplication-link:hover, .aplication-link:focus {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
