css  update plus svg

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,8 +236,7 @@ align-items: center;
 }
 
 .background {
-  background-image: linear-gradient(var(--hero-background), 
-  var(--hero-background)), url("/images/people-office1.jpg"); 
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1.jpg);
   background-repeat: no-repeat;
   max-width: 1440px;
 }
@@ -502,10 +501,10 @@ color: var(--subtle-text);
 }
 
 .icon:hover, .icon:focus {
+  border-color: var(--pressed-state);
   background-color: var(--white-background);
   color: var(--pressed-state);
-  border-color: var(--pressed-state);
-  fill: var(--pressed-state);
+   fill: var(--pressed-state);
 }
 
 .svg-customer {
